styles.css
body {
    display: flex;
    text-align: center;
    background-color: black;
    font-size: 20px;
}
.grid {
    min-width: 100vh;
    min-height: 80vh;
    display: grid;
    grid-template-columns: 2fr 1fr 1fr 1fr;
    grid-template-rows: 0.3fr 0.3fr 0.5fr 6fr 0.7fr;
    grid-template-areas: "header header header header"
                         "start start start start"
                         "timer score score bestscore"
                         "canvas canvas canvas bestscore"
                         "text text text text";
    justify-content: center;
    font-family: 'Space Mono', monospace;
    color: blanchedalmond;
    
}

.header {
    grid-area: header;
    font-family: 'Silkscreen', cursive;
    color: orange;
    font-size: 25px;

}

.start {
     grid-area: start;
     display: flex;
     justify-content: space-evenly; 

}

.aside-top-left {
    grid-area: timer;
    border-left: solid 5px lightskyblue;
    border-top: solid 5px lightskyblue;
    border-right: solid 5px lightskyblue;
    padding-top: 20px;
    
}

.aside-top-right {
    grid-area: score;
    border-top: solid 5px lightskyblue;
    border-right: solid 5px lightskyblue;
    padding-top: 20px;
    
}

.aside-right {
    grid-area: bestscore;
    border-top: solid 5px lightskyblue;
    border-right: solid 5px lightskyblue;
    border-bottom: solid 5px lightskyblue;
    padding-top: 20px;   
    
}

main {
    grid-area: canvas;
    border: solid 5px lightskyblue;
    margin: 0;
   
}

.aside-btm {
    grid-area: text;
    border-left: solid 5px lightskyblue;
    border-right: solid 5px lightskyblue;
    border-bottom: solid 5px lightskyblue;
    padding-top: 10px;
    font-size: 40px;
    
}


#startBtn, #resetBtn, #insBtn, #hideIns {
    font-family: 'Silkscreen', cursive;
    font-size: 20px;
    padding: 10px;
    margin-bottom: 20px;
    margin-left: 10px;
    background-color: lightgoldenrodyellow;
    width: 189px;

}

#hideIns {
    font-size: 15px;
    padding: 5px;
    margin-top: 15px;
    background-color: lightseagreen;
}

#insBtn {
    background-color: lightseagreen;
}

#resetBtn {
    background-color: lightcoral;
}



#canvas {
    background-image: url("./media/v882-kul-46.jpg");
    background-position: center;
    background-size: 1300px;
    height: 850px;
    width: 1000px;

}
.instructions {
    display: none;
    height: 850px;
    width: 1000px;

}

#ul {
    text-align: left;
    padding-left: 100px;
}

